--- a/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TwoWins/Views/HowToPlayWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TwoWins/Views/HowToPlayWindow.xaml
@@ -13,7 +13,7 @@
         <Button x:Name="CloseButton" Content="Close" Click="CloseButton_Click" Width="75" Height="23" HorizontalAlignment="Right" Margin="0,12,0,0" Grid.Row="1" FontSize="11" />
         <Grid>
         	<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Game:" VerticalAlignment="Top" FontSize="13.333" FontWeight="Bold"/>
-        	<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Hight and Low" VerticalAlignment="Top" FontSize="13.333" Margin="52,0,0,0"/>
+        	<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Two wins" VerticalAlignment="Top" FontSize="13.333" Margin="52,0,0,0"/>
         	<ScrollViewer Margin="0,23,0,0">
         		<TextBlock x:Name="Information" TextWrapping="Wrap" Text="Information" FontSize="11"/>
         	</ScrollViewer>
