--- a/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TwoWins/Popups/BetData.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TwoWins/Popups/BetData.xaml
@@ -1,25 +1,49 @@
-﻿<sdk:ChildWindow
+﻿<controls:ChildWindow x:Class="TheS.Casinova.TwoWins.Popups.BetData"
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
            xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls"
-           xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" 
-           xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-           xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-           mc:Ignorable="d" 
-           x:Class="TheS.Casinova.DevilSix.Popups.BetData"
            Width="400" Height="300" 
-           Title="Statistic">
+           Title="Title">
     <Grid x:Name="LayoutRoot" Margin="2">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <StackPanel x:Name="DataStack" Margin="0,37,0,0" >
-            <sdk:DataGrid AutoGenerateColumns="False" Height="196" x:Name="dataGrid1" Width="378" />
+        <Border x:Name="MessageBorder" RenderTransformOrigin="0.5,0.5" Margin="8,8,8,0" Grid.Column="1" Height="39" VerticalAlignment="Top">
+            <TextBlock Height="23" TextWrapping="Wrap" Text="Message" VerticalAlignment="Top" HorizontalAlignment="Right" Width="346" TextAlignment="Center" FontSize="13.333" Grid.ColumnSpan="2" Margin="0,8,8,0"/>
+        </Border>
+        <StackPanel Grid.Column="1" Margin="8,51,8,187" Orientation="Horizontal" d:LayoutOverrides="HorizontalMargin">
+            <Rectangle x:Name="Divider1" Width="1">
+                <Rectangle.Stroke>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="Black" Offset="1"/>
+                        <GradientStop Color="White"/>
+                    </LinearGradientBrush>
+                </Rectangle.Stroke>
+            </Rectangle>
+            <HyperlinkButton x:Name="BetDataHyperlinkButton" Content="BetData" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <Rectangle x:Name="Divider1_Copy1" Width="1">
+                <Rectangle.Stroke>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="Black" Offset="1"/>
+                        <GradientStop Color="White"/>
+                    </LinearGradientBrush>
+                </Rectangle.Stroke>
+            </Rectangle>
+            <HyperlinkButton x:Name="GraphHyperlinkButton" Content="Graph" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Rectangle x:Name="Divider1_Copy" Width="1">
+                <Rectangle.Stroke>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="Black" Offset="1"/>
+                        <GradientStop Color="White"/>
+                    </LinearGradientBrush>
+                </Rectangle.Stroke>
+            </Rectangle>
         </StackPanel>
-        <Button x:Name="GraphButton" Content="Graph" Click="GraphButton_Click" Width="75" Height="23" HorizontalAlignment="Right" Margin="0,12,0,0" Grid.Row="1" />
-        <Button x:Name="BetDataButton" Content="Bet Data" Click="BetDataButton_Click" Width="75" Height="23" HorizontalAlignment="Right" Margin="0,12,79,0" Grid.Row="1" />
-        <TextBlock Height="37" Margin="145,0,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-        <ComboBox HorizontalAlignment="Left" Height="25" Margin="8,8,0,0" VerticalAlignment="Top" Width="115"/>
+        <Border Grid.Column="1" Margin="8,78,8,8" />
     </Grid>
-</sdk:ChildWindow>
+</controls:ChildWindow>
