edit GamePlayUI HighAndLow
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TwoWins/Controls/GamePlayUI.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TwoWins/Controls/GamePlayUI.xaml
@@ -7,6 +7,15 @@
     d:DesignHeight="300" d:DesignWidth="400" Width="500" Height="400">
     
     <Grid x:Name="LayoutRoot" Background="White">
+    	<VisualStateManager.VisualStateGroups>
+    		<VisualStateGroup x:Name="BetState">
+    			<VisualState x:Name="Default"/>
+    			<VisualState x:Name="Change"/>
+    		</VisualStateGroup>
+    		<VisualStateGroup x:Name="BetOptionState">
+    			<VisualState x:Name="Single"/>
+    		</VisualStateGroup>
+    	</VisualStateManager.VisualStateGroups>
     	<Grid Height="40" VerticalAlignment="Top">
     		<Rectangle Fill="Black" Stroke="Black"/>
     		<TextBlock x:Name="Title" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Title" VerticalAlignment="Center" Margin="8,0,0,0" FontSize="26.667" Foreground="White"/>
