--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/ChipExchange/Views/DepositWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/ChipExchange/Views/DepositWindow.xaml
@@ -2,9 +2,9 @@
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
            xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls"
-           xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:TheS_Casinova_ChipExchange_Controls="clr-namespace:TheS.Casinova.ChipExchange.Controls" mc:Ignorable="d" x:Class="TheS.Casinova.ChipExchange.Views.ChipExchangeWindow"
+           xmlns:TheS_Casinova_ChipExchange_Controls="clr-namespace:TheS.Casinova.ChipExchange.Controls" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="TheS.Casinova.ChipExchange.Views.DepositWindow"
            Width="640" Height="550" 
-           Title="ChipExchangeWindow" FontSize="21.333">
+           Title="Deposit." FontSize="21.333">
     <Grid x:Name="LayoutRoot" Margin="2">
         <Grid.RowDefinitions>
             <RowDefinition />
