--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/PlayerProfile/Views/AccountManagerEditPage.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/PlayerProfile/Views/AccountManagerEditPage.xaml
@@ -1,12 +1,12 @@
-﻿<navigation:Page x:Class="TheS.Casinova.PlayerAccount.Views.PlayerInformationEditPage" 
+﻿<navigation:Page x:Class="TheS.Casinova.PlayerProfile.Views.AccountManagerEditPage" 
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
            xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
            xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
            mc:Ignorable="d"
            xmlns:navigation="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Navigation"
-           d:DesignWidth="640" d:DesignHeight="480"
-           Title="PlayerInformationEditPage Page" Width="600" Height="200">
+           d:DesignWidth="600" d:DesignHeight="200"
+           Title="AccountManagerEditPage Page" Height="200">
     <Grid x:Name="LayoutRoot">
     	<Grid Height="93" VerticalAlignment="Top">
     		<Rectangle Fill="#FFF4F4F5" Stroke="Black"/>
