--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/MLN/MLNDownLineDetailWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/MLN/MLNDownLineDetailWindow.xaml
@@ -1,9 +1,9 @@
-﻿<controls:ChildWindow x:Class="TheS.Casinova.MLN.MultiLevelNetworkWindow"
+﻿<controls:ChildWindow x:Class="TheS.Casinova.MLN.MLNDownLineDetailWindow"
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
            xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls"
            Width="640" Height="550" 
-           Title="Multi Level Network" FontSize="21.333">
+           Title="MLN downline detail." FontSize="21.333">
     <Grid x:Name="LayoutRoot" Margin="2">
         <Grid.RowDefinitions>
             <RowDefinition />
