--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/PlayerProfile/Views/AccountManagerWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/PlayerProfile/Views/AccountManagerWindow.xaml
@@ -1,4 +1,4 @@
-﻿<controls:ChildWindow xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" mc:Ignorable="d" x:Class="TheS.Casinova.PlayerProfile.Views.AccountManagerWindow"
+﻿<sdk:ChildWindow xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:TheS_Casinova_MLN="clr-namespace:TheS.Casinova.MLN" mc:Ignorable="d" x:Class="TheS.Casinova.PlayerProfile.Views.AccountManagerWindow"
            Width="640" Height="550" 
            Title="Account manager." FontSize="21.333">
     <Grid x:Name="LayoutRoot" Margin="2">
@@ -8,21 +8,21 @@
         </Grid.RowDefinitions>
 
         <Button x:Name="CloseButton" Content="Close" Click="CloseButton_Click" Width="75" Height="23" HorizontalAlignment="Right" Margin="0,12,0,0" Grid.Row="1" FontSize="11" />
-    	<controls:TabControl FontSize="11">
-    		<controls:TabItem x:Name="LogEvent" Header="Log event">
+    	<sdk:TabControl FontSize="11">
+    		<sdk:TabItem x:Name="LogEvent" Header="Log event">
     			<Grid>
     				<Grid Height="40" VerticalAlignment="Top">
     					<Rectangle Fill="#FFF4F4F5" Stroke="Black"/>
     					<Button x:Name="LogEventOptionButton" Content="Single" HorizontalAlignment="Left" Width="50" Margin="8,8,0,9" Height="23" />
     					<TextBlock x:Name="textBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="~" Margin="236,8,0,9" VerticalAlignment="Center" Visibility="Collapsed"/>
     					<Button x:Name="LogEventSearchButton" Content="Search" HorizontalAlignment="Right" Margin="0,8,8,9" Width="100"/>
-    					<controls:DatePicker x:Name="LogEventSearchFromDatePicker" HorizontalAlignment="Left" Margin="62,8,0,9" d:LayoutOverrides="Height" Width="170"/>
-    					<controls:DatePicker x:Name="LogEventSearchToDatePicker" Margin="249,8,112,9" d:LayoutOverrides="Height" Visibility="Collapsed"/>
+    					<sdk:DatePicker x:Name="LogEventSearchFromDatePicker" HorizontalAlignment="Left" Margin="62,8,0,9" d:LayoutOverrides="Height" Width="170"/>
+    					<sdk:DatePicker x:Name="LogEventSearchToDatePicker" Margin="249,8,112,9" d:LayoutOverrides="Height" Visibility="Collapsed"/>
     				</Grid>
     				<sdk:DataGrid x:Name="LogEventDataGrid" Margin="0,44,0,0"/>
     			</Grid>
-    		</controls:TabItem>
-    		<controls:TabItem x:Name="Information" Header="Information">
+    		</sdk:TabItem>
+    		<sdk:TabItem x:Name="Information" Header="Information">
     			<Grid>
     				<Grid Height="83" VerticalAlignment="Top">
     					<Rectangle Fill="#FFFFB4B4" Stroke="Black"/>
@@ -39,8 +39,8 @@
     					<ContentPresenter x:Name="AccountInformationContentPresenter"/>
     				</Grid>
     				<Grid Height="129" VerticalAlignment="Bottom">
-    					<controls:TabControl>
-    						<controls:TabItem x:Name="InformationCreditCard" Header="Credits card">
+    					<sdk:TabControl>
+    						<sdk:TabItem x:Name="InformationCreditCard" Header="Credits card">
     							<Grid Background="#FFE5E5E5">
     								<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Card type:" VerticalAlignment="Top" Margin="8,8,0,0" FontWeight="Bold"/>
     								<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Card number:" VerticalAlignment="Top" Margin="8,28,0,0" FontWeight="Bold"/>
@@ -54,8 +54,8 @@
     								<TextBlock x:Name="InformationCreditCardCardValidationNumberTextBlock" HorizontalAlignment="Right" TextWrapping="Wrap" Text="CardCardValidationNumberTB" VerticalAlignment="Bottom" Margin="0,0,21,28"/>
     								<HyperlinkButton x:Name="InformationCreditsCardEditButton" Content="Edit" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,8,8"/>
     							</Grid>
-    						</controls:TabItem>
-    						<controls:TabItem x:Name="InformationOther" Header="Other">
+    						</sdk:TabItem>
+    						<sdk:TabItem x:Name="InformationOther" Header="Other">
     							<Grid Background="#FFE5E5E5">
     								<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Card type:" VerticalAlignment="Top" Margin="8,8,0,0" FontWeight="Bold"/>
     								<TextBlock x:Name="InformationOtherCardTypeTextBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="InformationOtherCardTypeTextBlock" VerticalAlignment="Top" Margin="76,8,0,0"/>
@@ -66,38 +66,16 @@
     								<CheckBox x:Name="RequireImmediateCheckBox" Content="Require immediate payment when buyer use buy it now." HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="8,0,0,7"/>
     								<HyperlinkButton x:Name="InformationOtherEditButton" Content="Edit" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,8,8"/>
     							</Grid>
-    						</controls:TabItem>
-    					</controls:TabControl>
+    						</sdk:TabItem>
+    					</sdk:TabControl>
     				</Grid>
     			</Grid>
-    		</controls:TabItem>
-    		<controls:TabItem x:Name="MyNetwork" Header="My network">
+    		</sdk:TabItem>
+    		<sdk:TabItem x:Name="MyNetwork" Header="My network">
     			<Grid>
-    				<Grid Height="104" VerticalAlignment="Top" Margin="0,0,6,0">
-    					<Rectangle Fill="#FFFFB4B4" Stroke="Black"/>
-    					<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Current bonus available:" VerticalAlignment="Top" Margin="8,8,0,0" FontWeight="Bold" FontSize="16"/>
-    					<TextBlock x:Name="MLNCurrentBunusAvailableTextBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="MLNCurrentBunusAvailableTextBlock" VerticalAlignment="Top" Margin="233,8,0,0" FontSize="16"/>
-    					<Button x:Name="MLNDepositButton" Content="Deposit" HorizontalAlignment="Right" VerticalAlignment="Top" Width="75" Margin="0,8,8,0" Click="MLNDepositButton_Click" />
-    					<sdk:DataGrid x:Name="MLNNetworkDataGrid" Margin="8,36,8,7"/>
-    				</Grid>
-    				<Grid Margin="0,108,6,23">
-    					<Rectangle Fill="White" Stroke="Black"/>
-    					<Image HorizontalAlignment="Left" Source="/TheS.Casinova.PlayerAccount.Silverlight;component/Assets/Images/mln.png" Stretch="Fill" Width="271" Margin="8,76,0,41"/>
-    					<Grid Margin="283,132,9,32">
-    						<Rectangle Fill="White" Stroke="Black" RadiusY="16" RadiusX="16" Margin="0"/>
-    						<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Level 1:" VerticalAlignment="Top" Margin="8,32,0,0" FontWeight="Bold"/>
-    						<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Level 2:" VerticalAlignment="Bottom" Margin="8,0,0,48" FontWeight="Bold"/>
-    						<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Level 3:" VerticalAlignment="Bottom" Margin="8,0,0,16" FontWeight="Bold"/>
-    						<TextBlock x:Name="MLNFirstLevelTextBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="MLNFirstLevelTextBlock" VerticalAlignment="Top" Margin="61,32,0,0"/>
-    						<TextBlock x:Name="MLNSecondLevelTextBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="MLNSecondLevelTextBlock" VerticalAlignment="Bottom" Margin="61,0,0,48"/>
-    						<TextBlock x:Name="MLNThirdLevelTextBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="MLNThirdLevelTextBlock" VerticalAlignment="Bottom" Margin="61,0,0,16"/>
-    						<Button x:Name="MLNFirstViewButton" Content="View" HorizontalAlignment="Right" VerticalAlignment="Top" Width="75" Margin="0,29,8,0"/>
-    						<Button x:Name="MLNSecondViewButton" Content="View" HorizontalAlignment="Right" Width="75" Margin="0,61,8,45" d:LayoutOverrides="Height"/>
-    						<Button x:Name="MLNThirdViewButton" Content="View" HorizontalAlignment="Right" Width="75" Margin="0,0,8,13" VerticalAlignment="Bottom"/>
-    					</Grid>
-    				</Grid>
+    				<TheS_Casinova_MLN:MLNUI Margin="0" d:LayoutOverrides="Width, Height"/>
     			</Grid>
-    		</controls:TabItem>
-    	</controls:TabControl>
+    		</sdk:TabItem>
+    	</sdk:TabControl>
     </Grid>
-</controls:ChildWindow>
+</sdk:ChildWindow>
