commit การทำปุ่ม bookmark,Like ที่ทำได้ทุก ๆ รายการแล้ว

--- a/src/SPerfAll/sPerf_Web/Views/Shared/MasterPage.Master
+++ b/src/SPerfAll/sPerf_Web/Views/Shared/MasterPage.Master
@@ -16,7 +16,7 @@
     <script src="../../Scripts/ajaxScripts/Start.debug.js" type="text/javascript"></script>
     <script src="../../Scripts/ajaxScripts/extended/ExtendedControls.debug.js" type="text/javascript"></script>
     <script src="../../Scripts/jquery.hoverscroll-0.2.2.js" type="text/javascript"></script>
-
+    <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 </head>
 <body>
     <div id="page">
