--- a/src/SPerfAll/sPerf_Web/App_themes/sPerf/Sites.css
+++ b/src/SPerfAll/sPerf_Web/App_themes/sPerf/Sites.css
@@ -161,4 +161,8 @@
     color:#00f;
     background-color:#fff
 }
+#el03 { /* Text and background colour, blue on light gray */
+    color:#00f;
+    background-color:#fff
+}
 #el07 {font-family:"Courier New",Courier} /* Different font */
