Commit Casinoca project 26/10/2010 17.10
Signed-off-by: pongsak <pongsak@perfenterprise.com>

--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Popups/BetData.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Popups/BetData.xaml
@@ -30,7 +30,7 @@
         			</LinearGradientBrush>
         		</Rectangle.Stroke>
         	</Rectangle>
-        	<HyperlinkButton x:Name="BetDataHyperlinkButton" Content="BetData" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Center" Click="BetDataHyperlinkButton_Click" />
+        	<HyperlinkButton x:Name="BetDataHyperlinkButton" Content="BetData" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Center" />
         	<Rectangle x:Name="Divider1_Copy1" Width="1">
         		<Rectangle.Stroke>
         			<LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
