--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Views/StatisticPage.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Views/StatisticPage.xaml
@@ -1,14 +1,33 @@
 ﻿<navigation:Page x:Class="TheS.Casinova.Colors.Views.StatisticPage" 
-                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-                 xmlns:navigation="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Navigation" 
-                 xmlns:TheS_Casinova="clr-namespace:TheS.Casinova"
-                 mc:Ignorable="d"
+           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+           xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+           xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+           mc:Ignorable="d"
+           xmlns:navigation="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Navigation"
            d:DesignWidth="640" d:DesignHeight="480"
            Title="StatisticPage Page">
     <Grid x:Name="LayoutRoot">
-        
+    	<Grid Height="117" VerticalAlignment="Top">
+    		<Border BorderBrush="Black" BorderThickness="1" Margin="8">
+    			<StackPanel Margin="-1" Orientation="Horizontal" HorizontalAlignment="Center">
+    				<ComboBox Width="166" Margin="10,30"/>
+    				<TextBlock TextWrapping="Wrap" Text="Message" Width="418" Margin="10,0" HorizontalAlignment="Center" TextAlignment="Center" VerticalAlignment="Center" Height="68" FontSize="26.667"/>
+    			</StackPanel>
+    		</Border>
+    	</Grid>
+    	<Grid Margin="0,121,0,0">
+    		<StackPanel x:Name="WinnerStack" Height="180" Margin="8,1,8,0" Orientation="Horizontal" VerticalAlignment="Top">
+    			<TextBlock TextWrapping="Wrap" Text="Winner is" Width="306" FontSize="32" VerticalAlignment="Center" TextAlignment="Right" Margin="0,0,5,0"/>
+    			<TextBlock TextWrapping="Wrap" Text="Color" Width="306" FontSize="32" Foreground="Red" VerticalAlignment="Center" Margin="5,0,0,0"/>
+    		</StackPanel>
+    		<StackPanel x:Name="ColorStack" Margin="8,181,8,8" Height="180" Orientation="Horizontal" HorizontalAlignment="Center">
+    			<TextBlock TextWrapping="Wrap" Text="Black" FontSize="29.333" VerticalAlignment="Center" TextAlignment="Center" Margin="0,0,10,0"/>
+    			<TextBlock TextWrapping="Wrap" Text="Pot" FontSize="29.333" VerticalAlignment="Center" Margin="10,0,50,0" Foreground="Red"/>
+    			<TextBlock TextWrapping="Wrap" Text="White" FontSize="29.333" VerticalAlignment="Center" Margin="50,0,10,0"/>
+    			<TextBlock TextWrapping="Wrap" Text="Pot" FontSize="29.333" VerticalAlignment="Center" Foreground="Red" Margin="10,0,0,0"/>
+    		</StackPanel>
+    	</Grid>
+
     </Grid>
 </navigation:Page>
