--- a/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TwoWins/Popups/BetData.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TwoWins/Popups/BetData.xaml
@@ -2,6 +2,10 @@
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
            xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls"
+           xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" 
+           xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+           xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+           mc:Ignorable="d" 
            Width="400" Height="300" 
            Title="Title">
     <Grid x:Name="LayoutRoot" Margin="2">
