--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Views/GamePlayPage.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Views/GamePlayPage.xaml
@@ -9,10 +9,9 @@
            Title="Colors GamePlayPage Page" mc:Ignorable="d">
     <Grid x:Name="LayoutRoot">
     	<Grid.ColumnDefinitions>
-    		<ColumnDefinition Width="0.788*"/>
-    		<ColumnDefinition Width="0.212*"/>
+    		<ColumnDefinition/>
     	</Grid.ColumnDefinitions>
-    	<TheS_Casinova:GamePlayUI/>
-    	<ListBox x:Name="GameTables" Grid.Column="1" Margin="8,0,0,0"/>
+    	<!--<TheS_Casinova:GamePlayUI Width="Auto" Height="Auto" Margin="0,0,132,0"/>-->
+    	<!--<ListBox x:Name="GameTables" HorizontalAlignment="Right" Width="128"/>-->
     </Grid>
 </navigation:Page>
